src/objects/GSA_IT_Applications__c.object
<CustomObject>
    <description>Captures application records that have been submitted via a web-form</description>
    <fields>
        <fullName>Agile_Project_Management__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agile Project Management</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <description>Applicant email</description>
        <label>Applicant Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Applicant Name</label>
        <referenceTo>Applicants_Information__c</referenceTo>
        <relationshipLabel>GSA IT Applications</relationshipLabel>
        <relationshipName>GSA_IT_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Source__c</fullName>
        <label>Applicant Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Number__c</fullName>
        <description>Applicant phone</description>
        <label>Best Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Building_Systems__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Building Systems</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_and_State_or_Zip_Code__c</fullName>
        <description>Applicant City/State, or Zip Code</description>
        <label>City and State, or Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Infrastructure_SaaS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cloud Infrastructure/SaaS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <description>Applicant current employer</description>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CyberSecurity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CyberSecurity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Management_Visualization__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Data Management/Visualization</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Science__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Data Science</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevOps_Engineering_and_Operations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DevOps Engineering and Operations</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enterprise_Architecture__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enterprise Architecture</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Skills_Total__c</fullName>
        <formula>Agile_Project_Management__c  +  Building_Systems__c +  Cloud_Infrastructure_SaaS__c +  CyberSecurity__c +  Data_Management_Visualization__c +  Data_Science__c +  DevOps_Engineering_and_Operations__c +  Enterprise_Architecture__c +   Network_Engineers__c +  Security_Engineering_and_Operations__c +  Software_Development_front_back_end__c +  Software_Development_front_back_end__c +  Solutions_Architecture__c +  UI_UX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Skills Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_Position__c</fullName>
        <description>Position the applicant is interested in.</description>
        <label>Interested Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_1__c</fullName>
        <description>Applicant links to user information</description>
        <inlineHelpText>e.g. http://github.com/username</inlineHelpText>
        <label>Link #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_2__c</fullName>
        <inlineHelpText>e.g. http://linkedin.com/username</inlineHelpText>
        <label>Link #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_3__c</fullName>
        <inlineHelpText>e.g. http://about.me/username</inlineHelpText>
        <label>Link #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Engineers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Network Engineers</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Skills__c</fullName>
        <description>Other skills</description>
        <label>Other Skills</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <description>Applicant resume</description>
        <label>Resume</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Application Incomplete</fullName>
                </value>
                <value>
                    <fullName>Application is Spam</fullName>
                </value>
                <value>
                    <fullName>Application Replaced</fullName>
                </value>
                <value>
                    <fullName>Advanced to Interviews</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>1st Round Assigned</fullName>
                </value>
                <value>
                    <fullName>1st Round Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected in 1st Round</fullName>
                </value>
                <value>
                    <fullName>2nd Round Assigned</fullName>
                </value>
                <value>
                    <fullName>2nd Round Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected in 2nd Round</fullName>
                </value>
                <value>
                    <fullName>Consensus Assigned</fullName>
                </value>
                <value>
                    <fullName>Consensus Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected in Consensus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Engineering_and_Operations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Security Engineering and Operations</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Development_front_back_end__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Software Development, front &amp; back end</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solutions_Architecture__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Solutions Architecture</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_UX__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UI/UX</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>U_S_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant U.S. citizenship verification</description>
        <inlineHelpText>For some positions, due to legislation or agency policy, U.S. citizenship is required.</inlineHelpText>
        <label>U.S. Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veteran_Status_US_Armed_Forces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran Status (US Armed Forces)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterans_Preference_Claim__c</fullName>
        <description>Veteran&apos;s preference claim</description>
        <label>Veterans&apos; Preference Claim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSA IT Applications</label>
    <listViews>
        <fullName>GSA_IT_Hiring_Managers</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Applicant_Email_Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>GSA IT Hiring Managers</label>
        <sharedTo>
            <group>GSA_IT_Hire_Hiring_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA IT Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>